Third-party NTPs: Set "instant support" flag earlier.

This fixes a regression introduced in
https://codereview.chromium.org/2429523002, which removed some
unnecessary logging calls that turned out to have unexpected side
effects.

This CL is a workaround rather than a proper fix; as far as I can tell,
it'll still be racy, though no worse than it was before. In fact, it's
kind of incidental that this ever worked at all...

BUG=698675
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2733873002
Cr-Commit-Position: refs/heads/master@{#455416}

Former-commit-id: 196a572ea1ff4a260f80bb3f96ebd4ffeaed0f71